--- a/src/html/options.html
+++ b/src/html/options.html
@@ -52,9 +52,9 @@ textarea {
 
 <body>
   <!-- ホワイトリスト -->
-  <fieldset id="whitelist">
-    <legend>Whitelist</legend>
-    <textarea id="storage_whitelist" rows="8"></textarea>
+  <fieldset id="denylist">
+    <legend>Denylist</legend>
+    <textarea id="storage_denylist" rows="8"></textarea>
     <small>Specify the domain name separated by a newline.</small>
   </fieldset>
   <!-- ホワイトリスト -->
