--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -78,6 +78,6 @@ body {
 <body>
   <div id="popup" hidden="">
     <div class="title" id="header">RejectServiceWorker</div>
-    <div class="item target-off" id="item_AddWhitelist" hidden="">Add to Whitelist</div>
-    <div class="item target-on" id="item_RemoveWhitelist" hidden="">Remove from Whitelist</div>
+    <div class="item target-off" id="item_AddDenylist" hidden="">Add to Denylist</div>
+    <div class="item target-on" id="item_RemoveDenylist" hidden="">Remove from Denylist</div>
   </div>
